--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
+::-webkit-scrollbar {
+  width: 5px; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 100px;
+}
+.left{
+  justify-content: flex-end;
+}
+.repos{
+  height: 500px;
+  overflow: scroll;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.card {
+  margin-top: 125px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img {
+  margin-top: -80px;
+}
+.NavLink{
+  cursor: pointer;
+}
+.text-sm{
+  font-size: 12px;
+}
+.dark{
+  background: #000;
+}
+a{
+  text-decoration: none !important;
+ font-size: 20px;
 }
